tests/machine/x/go/pure_global_fold.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/pure_global_fold.go:11:14: undefined: k

1: //go:build ignore
